// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SwiperSlide component should take a snapshot with children 1`] = `
<div>
  <swiper-slide
    data-testid="swiper-slide"
  >
    <p>
      Child
    </p>
  </swiper-slide>
</div>
`;

exports[`SwiperSlide component should take a snapshot without children 1`] = `
<div>
  <swiper-slide
    data-testid="swiper-slide"
  />
</div>
`;
